Updated Java classes.